--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -27,3 +27,16 @@
   border: 1px solid black;
   padding: 4px;
 }
+.product{
+  height: 300px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product img{
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
