--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,11 @@ html, body {
 h1, h2, h3, h4, h5, h6, p {
  margin-bottom: 16px
 }
+section{
+    padding: 10px, 8px;
+}
+ul li{
+    list-style-image: url("/dog.webp");
+    
+
+}
